[package]
name = "pipelined_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

cyclic_data_types = {git="https://github.com/HasinZaman/cyclic_data_structures", branch="0.2.4"}

log = "*"

#should be put into default module
paste = "*"

#should be put into default module
flate2 = "*"


[dev-dependencies]
rand = "*"
lazy_static = "*"
serial_test = "2"
log4rs = "*"